# data-flow

./: .env  .flake8  Dockerfile  Dockerfile.data-flow  Dockerfile.kafka-mongo-setup  README.MD  docker-compose.yml  etl.py  hadoop.env  hdfs_response.txt  mongo_sink.txt  poetry.toml  pyproject.toml  response.txt  setup-kafka-mongo.sh  test-e2e.sh
app/: pyproject.toml
app/data_flow/: etl.py
data_flow/: etl.py
